Fixed card title text overflow

--- a/src/app/boards/board/list/list.component.scss
+++ b/src/app/boards/board/list/list.component.scss
@@ -47,6 +47,10 @@
 
     .card {
       padding: 10px;
+
+      .title {
+        word-wrap: break-word;
+      }
     }
 
     .card:hover {
